# Embedding-Drift

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: drift_thresholds.yaml  monitoring.yaml  pipeline.yaml
data/: README.md
docs/: 01_embeddings_fundamentals.md  02_embedding_drift_theory.md  03_why_monitor_drift.md  04_monitoring_with_langsmith.md  05_drift_metrics_and_thresholds.md  06_drift_interactions.md
docs/architecture/: system_design.md
examples/: drift_monitoring_demo.py  evidently_drift_report_demo.py  fraud_detection_demo.py  full_pipeline_live.py
notebooks/: 01_data_exploration.ipynb  02_embedding_analysis.ipynb  03_drift_detection.ipynb  04_dual_layer_monitoring.ipynb
reports/: Embedding_Drift_Execution_Guide.docx
src/: __init__.py
src/data/: __init__.py  loader.py
src/data_drift/: __init__.py  concept_shift.py  covariate_shift.py  target_shift.py
src/drift_detection/: __init__.py  detectors.py  metrics.py
src/embeddings/: __init__.py  generator.py  store.py
src/fraud_detection/: __init__.py  ml_scorer.py  pipeline.py  rag_retriever.py  transaction_processor.py
src/monitoring/: __init__.py  alerts.py  dashboard.py  evidently_reporter.py  langsmith_reporter.py
src/visualization/: __init__.py  plots.py  schematics.py
tests/: test_detectors.py  test_evidently_reporter.py  test_metrics.py  test_ml_scorer.py  test_pipeline.py
